<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Location Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="get_location">Get Current Location</string>
    <string name="info">Retrieve Trackings</string>
    <string name="save">Save Location</string>
    <string name="title_activity_retrieve">Retrieve Locations</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_date_rect">Search By Date</string>
    <string name="title_activity_place_ret">Search By Place</string>
    <string name="placeret">Enter a place to search</string>
    <string name="title_activity_place_result">PlaceResult</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
    <string name="title_activity_date_result">DateResult</string>
    <string name="title_activity_date_final_result">DateFinalResult</string>
    <string name="title_activity_final">Final</string>
    <string name="title_activity_last">Last</string>

</resources>